# iot-home

./: .gitignore  README.md  download-repos  repos.list
iot-device.rp2040/: .env.development.gpg  .env.gpg  .gitignore  CMakeLists.txt  README.md  attach-picoprobe.openocd  build.sh  env.development.example  env.example  monitor-pico-serial  package-lock.json  package.json  setup  setup-init  watch-build
iot-device.rp2040/cmake/: credentials.cmake.gpg
iot-device.rp2040/src/: CMakeLists.txt  cgi.cpp  cgi.h  lwipopts.h  main.cpp  ssi.cpp
iot-device.rp2040/src/api_handler/: ApiHandler.cpp  ApiHandler.h
iot-device.rp2040/src/fs/: response.json
iot-device.rp2040/src/http_client/: http_client_request.cpp  http_client_request.h  lwip_http_client.c  lwip_http_client.h
iot-device.rp2040/src/wifi_manager/: WifiManager.cpp
iot-device.virtual/: .env.example  .env.gpg  package-lock.json  package.json  setup-dev  start-dev  tsconfig.json
iot-integration-server/: .env.example  .env.gpg  .env.local.gpg  .gitignore  deploy  docker-compose.yml  os-install  os-setup  package-lock.json  package.json  setup-dev  setup-prod  start-docker-dev  stop-docker-prod
iot-os-interface-server/: .env.example  .env.gpg  .env.local.gpg  .prettierrc  deploy  deploy-code-dev  package-lock.json  package.json  setup-init  setup-init-dev  start-dev  start-prod
iot-public-server/: .env.example  .env.gpg  README.md  deploy  docker-compose.yml  package-lock.json  package.json  setup-init  start-docker-dev  start-docker-prod  start-prod  stop-docker-dev  tsconfig.json
(+198 files in other folders)
